# audio-effects

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.py
samples/: CMakeLists.txt
src/: CMakeLists.txt
src/add_sine/src/: CMakeLists.txt  main.cpp
src/delay/src/: CMakeLists.txt  main.cpp
src/delay/src/include/delay/: delay.hpp
src/hello/: CMakeLists.txt
src/hello/src/: main.cpp
src/oscillator/: CMakeLists.txt
src/oscillator/include/oscillator/: sine.hpp
src/wave/src/: CMakeLists.txt  reader.cpp  writer.cpp
src/wave/src/include/wave/: header.hpp  reader.hpp  writer.hpp
src/wave/test/src/: CMakeLists.txt  wave_reader_test.cpp  wave_writer_test.cpp
